# Snake

./: CMakeLists.txt  Makefile
brick_game/: Basemodel.h
brick_game/snake/: snake.cpp  snake.h
brick_game/tetris/: backend.cpp  backend.h  defines.h  tetris_model.cpp  tetris_model.h
controller/: controller
gui/cli/: frontend.cpp  frontend.h  main.cpp
gui/desktop/: main.cpp  mainwindo_0.cpp  mainwindo_0.h  mainwindo_0.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: tests.c
